[gd_scene load_steps=3 format=3 uid="uid://menu"]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://styles/hud_panel_style.tres" type="StyleBoxFlat" id=2]

[node name="Main" type="Control"]
rect_min_size = Vector2( 1280, 720 )

[node name="Background" type="ColorRect" parent="Main"]
rect_size = Vector2( 1280, 720 )
color = Color( 0.03, 0.04, 0.08 )

[node name="MenuPanel" type="Panel" parent="Main"]
rect_position = Vector2( 440, 140 )
rect_min_size = Vector2( 400, 420 )
custom_styles/panel = ExtResource( 2 )

[node name="Title" type="Label" parent="MenuPanel"]
text = "2D NASCAR PACK RACING"
rect_position = Vector2( 20, 18 )
custom_fonts/font = null

[node name="OptionLabel" type="Label" parent="MenuPanel"]
text = "Select Track Preset"
rect_position = Vector2( 20, 70 )

[node name="TrackSelect" type="OptionButton" parent="MenuPanel"]
rect_position = Vector2( 20, 102 )
rect_min_size = Vector2( 360, 34 )

[node name="TrackInfo" type="Label" parent="MenuPanel"]
rect_position = Vector2( 20, 150 )
rect_min_size = Vector2( 360, 64 )
text = "Draft-friendly lap done right."

[node name="StartButton" type="Button" parent="MenuPanel"]
rect_position = Vector2( 120, 230 )
rect_min_size = Vector2( 160, 38 )
text = "Start Race"

[node name="QuitButton" type="Button" parent="MenuPanel"]
rect_position = Vector2( 120, 282 )
rect_min_size = Vector2( 160, 34 )
text = "Quit"

[node name="CreditsLabel" type="Label" parent="MenuPanel"]
rect_position = Vector2( 20, 346 )
text = "Designed for local play on macOS"

[node name="UIAudio" type="AudioStreamPlayer" parent="Main"]
stream = null
